# xinforge

./: .gitignore  Cargo.toml  README.md
crates/xinforge-model/: Cargo.toml
crates/xinforge-model/examples/: provider_chat.rs  provider_repl.rs
crates/xinforge-model/src/: error.rs  lib.rs  message.rs  profile.rs  request.rs  response.rs  runtime.rs  tool.rs  usage.rs
crates/xinforge-model/src/provider/: mod.rs  openai.rs
docs/: coding-agent-architecture.md  model-provider-runtime-design.md
src/: agent.rs  llm.rs  main.rs  skill.rs  todo.rs  tools.rs
