[package]
name = "xinforge"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/xinforge-model"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
xinforge-model = { path = "crates/xinforge-model" }
